--- a/src/main/resources/templates/addContact.html
+++ b/src/main/resources/templates/addContact.html
@@ -13,7 +13,7 @@
       <h4 class="card-title"> Add Contact</h4>
     </div>
     <div class="card-body">
-      <form th:action="@{/admin/updateDetails}" th:object="${details}" method="post">
+      <form th:action="@{/admin/addDetails}" th:object="${details}" method="post">
 
 
         <div class="form-group">
