--- a/src/main/resources/templates/AdminPortal.html
+++ b/src/main/resources/templates/AdminPortal.html
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/profile}"><i class='bx bx-user-circle'></i> Profile</a>
+                <a class="nav-link" th:href="@{/admin/profiles}"><i class='bx bx-user-circle'></i> Profile</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link notification-icon" th:href="@{/admin/view-request}" href="#notifications">
