--- a/src/main/resources/templates/addAdmin.html
+++ b/src/main/resources/templates/addAdmin.html
@@ -15,7 +15,7 @@
                     <h3>Add Admin</h3>
                 </div>
                 <div class="card-body">
-                    <form id="adminForm" th:action="@{/addAdmin}" th:object="${admin}" method="post">
+                    <form id="adminForm" th:action="@{/admin/addAdmin}" th:object="${admin}" method="post">
                         <div class="form-group">
                             <label for="username">Username</label>
                             <input type="text" class="form-control" id="username" th:field="*{username}" placeholder="Enter username" required>
