--- a/src/main/resources/templates/admin_view_project.html
+++ b/src/main/resources/templates/admin_view_project.html
@@ -7,26 +7,7 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" th:href="@{/css/style.css}">
-    <style>
-        .project-image {
-            width: 100%;
-            height: 400px;
-            object-fit: cover;
-        }
-        .project-thumbnail {
-            width: 100%;
-            height: 300px;
-            object-fit: cover;
-        }
-        .project-description {
-            margin-top: 20px;
-        }
-        body{
-            background-color: rgb(87, 84, 84);
-            color: white;
-        }
-
-    </style>
+    <link rel="stylesheet" th:href="@{/css/admin-project-view.css}">
 </head>
 <body>
 <!-- Navbar -->
