--- a/src/main/resources/templates/update-service-contact-about-us.html
+++ b/src/main/resources/templates/update-service-contact-about-us.html
@@ -10,19 +10,12 @@
 <div class="container mt-5">
     <div class="card">
         <div class="card-header">
-            <h4 class="card-title">Update Service, Contact, and About Us</h4>
+            <h4 class="card-title text-center">Update Contact</h4>
         </div>
         <div class="card-body">
             <form th:action="@{/admin/service-contact-about-us/edit{id} (id=${details.id})}" th:object="${details}" method="post">
-                <div class="form-group">
-                    <label for="service">Service</label>
-                    <textarea class="form-control" id="service" name="service" rows="3" th:field="*{service}"></textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="about">About Us</label>
-                    <textarea class="form-control" id="about" name="about" rows="3" th:field="*{about}"></textarea>
-                </div>
+                
+                
 
                 <div class="form-group">
                     <label for="phoneNumber">Phone Number</label>
@@ -44,7 +37,7 @@
                     <input type="text" class="form-control" id="facebook" name="faceBook" th:field="*{faceBook}">
                 </div>
 
-                <button type="submit" class="btn btn-primary">Save Details</button>
+                <div class="container-fluid d-flex justify-content-center"><button type="submit" class="btn btn-primary">Save Details</button></div>
             </form>
         </div>
     </div>
