--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,203 @@
+
+body {
+    color: #fff;
+    background-image: url('/img/homepage-background.webp');
+    background-position: center;
+    background-size: cover;
+}
+
+.features-section {
+    padding: 50px 0;
+}
+
+.card-custom {
+    margin-bottom: 20px;
+    background: #ffffff;
+    color: #343a40;
+    border: 1px solid #ddd;
+    border-radius: 0.40rem;
+}
+
+.card-custom .card-body {
+    padding: 20px;
+}
+
+.card-custom img {
+    max-width: 100%;
+    height: auto;
+}
+
+.card-custom h3 {
+    margin-top: 0;
+}
+
+#owner {
+    background-image: url('/img/construction-background.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+.owner-section {
+    background: #f8f9fa;
+    color: #343a40;
+    padding: 50px 0;
+    color: rgb(15, 15, 15);
+}
+
+.owner-card-parent {
+    display: flex;
+    justify-content: center;
+}
+
+.owner-card {
+    background: #16eed1;
+    max-width: 400px;
+    border-radius: 8px;
+    border: 1px solid rgb(15, 15, 15);
+    padding: 5px 50px;
+}
+
+.owner-section img {
+    border-radius: 50%;
+    max-width: 300px;
+    height: 300px;
+
+}
+
+.owner-info {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.owner-info h3 {
+    margin-top: 20px;
+    font-size: 1.5rem;
+}
+
+.owner-info p {
+    font-size: 1.1rem;
+}
+
+
+.row-equal {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.col-equal {
+    flex: 1;
+    min-width: 30%;
+    max-width: 100%;
+}
+
+.res {
+    background-color: #f12a2a;
+}
+
+.com {
+    background-color: aqua;
+}
+
+.ren {
+    background-color: blueviolet;
+}
+
+.pro {
+    background-color: aquamarine;
+}
+
+.con {
+    background-color: chartreuse;
+}
+
+.card-custom {
+    transition: transform 3s ease;
+    transform: scale(1);
+
+}
+
+.card-custom.scrolled {
+    transform: scale(1.2);
+}
+
+.see-project {
+    font-size: larger;
+    font-weight: 500;
+     background-color: rgb(189, 189, 184);
+     padding: 6px 10px;
+
+}
+.see-project a{
+    color: rgb(245, 210, 12);
+}
+.see-project a:hover{
+    color: blue;
+}
+
+.see-project:hover {
+    color: #f10814;
+}
+
+.project {
+    color: #fff;
+    background:
+        linear-gradient(to bottom right,
+            rgba(117, 248, 105, 0.8),
+            rgba(255, 0, 0, 0.5) 50%,
+            rgba(0, 0, 255, 0.8));
+    border-radius: 16px;
+    padding-bottom: 10px;
+    padding-top: 5px;
+}
+
+.project-text {
+    color: #fff;
+}
+
+.contact-card {
+    background:
+        linear-gradient(rgba(255, 0, 0, 0.8),
+            rgba(145, 145, 148, 0.8));
+    border-radius: 4px;
+    padding-bottom: 5px;
+}
+
+.contact-details {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.contact-text {
+    color: #000;
+}
+
+
+.form-link {
+    color: #32f30b;
+    font-weight: bolder;
+}
+
+
+@keyframes scaleProjectImage {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.project-item {
+    transition: transform 3s ease-in-out;
+}
+
 i {
     color: green;
     font-size: 18px;
