--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -249,7 +249,7 @@
             <div class="text-center owner-card">
                 <h2>Meet Our Founder</h2>
                 <div class="owner-info">
-                    <img id="owner1" src="/img/israel.jpg" alt="Owner Image">
+                    <img id="owner1" src="/img/Israel.jpg" alt="Owner Image">
                     <h3>Nwafor Isreal</h3>
                     <p>Founder & CEO</p>
                 </div>
